# arwn-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-app.yml  release.yml
arwn_client/: _models.py  _parser.py  _units.py  cli.py
docs/superpowers/plans/: 2026-05-25-arwn-client-ha-metadata.md
docs/superpowers/specs/: 2026-05-25-arwn-client-ha-metadata-design.md
pyarwn/: __init__.py  _models.py  _parser.py
tests/: test_parser.py
